# rust-github-notifier

./: .gitignore  Cargo.toml  README.md  gh-notifier.plist  install.sh  shared.sh  uninstall.sh
src/: cli.rs  errors.rs  file_operations.rs  lib.rs  main.rs  notifier.rs  request.rs  token.rs  util.rs
src/command_line/: Cargo.toml
src/command_line/src/: lib.rs
src/notify/: Cargo.toml
src/notify/src/: lib.rs
