[package]
name = "gh-notifier"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.14", features = ["derive"] }
serde_json = "1"
reqwest = {version = "0.11.1", features = ["json"] }
tokio = { version = "1", features = ["full"] }
command_line = {path = "src/command_line"}
notify = {path = "src/notify"}