[package]
name = "gh-notifier"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
command_line = { git = "https://github.com/nihilok/rust-command-line.git" }
notify = { git = "https://github.com/nihilok/rust-notify.git" }
tokio = { version = "1", features = ["full"] }
reqwest = {version = "0.11.1", features = ["json"] }
serde = { version = "1.0.14", features = ["derive"] }
serde_json = "1"
